[package]
name = "simple-translate-json"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Simple mini library made for translations (JSON)"
homepage = "https://github.com/JustFoxx/simple-translate-json"
repository = "https://github.com/JustFoxx/simple-translate-json"
documentation = "https://github.com/JustFoxx/simple-translate-json"
readme = "README.md"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-release = "0.25.3"
evmap = "10.0.2"
include_dir = "0.7.3"
serde_json = "1.0.1"
sys-locale = "0.3.1"

